--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                         <p class="hero__user-companydesc">Multi-layered client-server neural-net</p>
                                         <p class="hero__user-company-bs">harness real-time e-markets</p>
                                     </div>
-                                    <button class="hero__userbtn" data-bs-toggle="modal" data-bs-target="#exampleModal">btn</button>
+                                    <button class="hero__userbtn btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">btn</button>
                                 </li>
                             </template>
                         </ul>
